syntax = "proto3";

package auth;

message AuthResponse {
  string access_token = 1;
  string token_type = 3;
  int64 expires_in = 4;
}

message AuthBasicLoginRequest {
  string email = 1;
  string password = 2;
}

service AuthService {
  rpc BasicLogin(AuthBasicLoginRequest) returns (AuthResponse);
}